src/core/compile
-*- mode: compilation; default-directory: "~/Development/cando/src/core/" -*-
Compilation started at Thu Sep  6 18:50:58

make -k sad
make scrape
python /Users/meister/Development/cando/src/common/symbolScraper.py symbols_scraped.inc *.h *.cc *.scrape.inc
packageName = CorePkg
symbols file name = symbols_scraped.inc
exports file name = symbols_exported.inc
First scrape fileName = symbols_scraped.inc
Skipping file[*.scrape.inc] - it doesn't exist
There are 822 existing symbols
There are 822 scraped symbols
There are 0 removed symbols
There are 0 added symbols
!--------------------------------------------------
!
!   No new symbols were seen
!
!--------------------------------------------------
/Users/meister/Development/cando/externals/src/boost_1_49_0/bjam -j 5 toolset=clang link=shared threading=single install-lib_d
cando_app_bin_dir == /Users/meister/Development/cando/build/cando.app/Contents/MacOS
cando_app_bin_dir == /Users/meister/Development/cando/build/cando.app/Contents/MacOS
cando_app_lib_dir == /Users/meister/Development/cando/build/cando.app/Contents/Resources/lib
...patience...
...patience...
...patience...
...patience...
...patience...
...found 5822 targets...
...updating 5 targets...
clang-darwin.compile.c++ bin/clang-darwin-4.2.1/debug/lispList.o
lispList.cc:95:2: error: no matching function for call to 'af_def'
        Defun(nreconc);
        ^~~~~~~~~~~~~~
./foundation.h:77:18: note: expanded from macro 'Defun'
#define Defun(x) af_def(CurrentPkg,#x,&af_##x, ARGS_af_##x, DECL_af_##x, DOCS_af_##x); 
                 ^~~~~~
./af_function_templates.h:635:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)() , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:644:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:653:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:662:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:671:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:680:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4,P5) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:689:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4,P5,P6) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:698:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4,P5,P6,P7) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:707:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4,P5,P6,P7,P8) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:716:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4,P5,P6,P7,P8,P9) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
./af_function_templates.h:725:10: note: candidate template ignored: couldn't infer template argument 'RT'
    void af_def(const string& packageName, const string& name, RT (*fp)(P1,P2,P3,P4,P5,P6,P7,P8,P9,P10) , const string& arguments="", const string& declares="", const string& docstring="", int locked=1 )
         ^
1 error generated.

    "clang++" -x c++ -O0 -g -Warray-bounds -g3 -O0 -fno-inline -Wall -g -DEXPAT -DREADLINE -DSOURCE_DEBUG -DUSEBOOSTPYTHON -I"." -I"../../build/include" -I"../../build/include/boost" -I"../../src" -I"/Library/Frameworks/EPD64.framework/Versions/7.2/include/python2.7" -I"/Users/meister/Development/cando/externals/src/boost_1_49_0" -c -o "bin/clang-darwin-4.2.1/debug/lispList.o" "lispList.cc"

...failed clang-darwin.compile.c++ bin/clang-darwin-4.2.1/debug/lispList.o...
clang-darwin.compile.c++ bin/clang-darwin-4.2.1/debug/cons.o
clang-darwin.compile.c++ bin/clang-darwin-4.2.1/debug/corePackage.o
...skipped <pbin/clang-darwin-4.2.1/debug>libcore_d.dylib for lack of <pbin/clang-darwin-4.2.1/debug>lispList.o...
...skipped <plibs>libcore_d.dylib for lack of <pbin/clang-darwin-4.2.1/debug>libcore_d.dylib...
...failed updating 1 target...
...skipped 2 targets...
...updated 2 targets...
make: *** [sad] Error 1

Compilation exited abnormally with code 2 at Thu Sep  6 18:51:15
